--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack": "^3.5.4"
   },
   "dependencies": {
+    "express": "^4.15.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
