--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "meli-webapp",
   "version": "1.0.0",
   "description": "Web App - Test Practico para Mercado Libre Edit",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start:dev": "NODE_ENV=development webpack && NODE_ENV=development node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
