--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.15.4",
     "http-proxy-middleware": "^0.17.4",
     "isomorphic-fetch": "^2.2.1",
+    "node-http-proxy-json": "^0.1.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
