--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web App - Test Practico para Mercado Libre Edit",
   "main": "server.js",
   "scripts": {
-    "start:dev": "NODE_ENV=development webpack && NODE_ENV=development node server.js",
+    "dev": "NODE_ENV=development webpack --progress --profile --colors && NODE_ENV=development node server.js",
+    "prod": "NODE_ENV=production webpack --progress --profile --colors && NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,7 +27,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
-    "webpack": "^3.5.4"
+    "webpack": "^3.5.4",
+    "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
     "express": "^4.15.4",
