--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-http-proxy-json": "^0.1.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
